--- a/lang.cabal
+++ b/lang.cabal
@@ -73,6 +73,7 @@ test-suite test
                     , BogusTests
                     , DeBruijnTests
                     , Phase1Tests
+                    , Phase2Tests
 
     build-depends:    grammar
                     , lang
