--- a/lang.cabal
+++ b/lang.cabal
@@ -34,6 +34,7 @@ library lang
                     , Value
                     , DeBruijn
                     , DBEnv
+                    , CustomMap
                     -- , Interp.Expr
                     -- , Interp.Stmt
                     -- , Interp.Prog
@@ -74,6 +75,7 @@ test-suite test
                     , DeBruijnTests
                     , Phase1Tests
                     , Phase3Tests
+                    , CustomMapTests
 
     build-depends:    grammar
                     , lang
