--- a/lang.cabal
+++ b/lang.cabal
@@ -7,6 +7,7 @@ version:            0.1.0.0
 common shared
     build-depends:    base >=4.17 && < 4.22
                     , array
+                    , lens
 
     default-language: GHC2021
 
